# purple

./: .hgignore  CHANGELOG.md  LICENSE.txt  README.rst  README.txt  pyproject.toml  setup.py
purple/: __init__.py  data.py  machine.py  main.py  switch.py
purple/tests/: test_machine.py  test_switch.py
scripts/: purple
